@@ -1,5 +1,9 @@
 2015-12-11  Ola Jeppsson  <ola@adapteva.com>
 
+	* epiphany-elf-sim.py.in: Add --host flag.
+
+2015-12-11  Ola Jeppsson  <ola@adapteva.com>
+
 	* epiphany-elf-sim.py.in: Add --external-fetch flag.
 
 2015-12-11  Ola Jeppsson  <ola@adapteva.com>
